--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,11 @@ dependencies:
     sdk: flutter
   path: ^1.8.3
   provider: ^6.0.5
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.18.1
+  highlight_text: ^1.7.0
+  
+
 
 dev_dependencies:
   flutter_test:
