--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,13 +18,17 @@ dependencies:
   highlight_text: ^1.7.0
   shared_preferences: ^2.2.0
   path_provider: ^2.1.0
-  msix: ^3.16.1
+  msix: ^3.9.1
   chinese_font_library: ^1.2.0
+  leancloud_storage: ^0.7.10
+  json_annotation: ^4.1.0
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.1.11
+  json_serializable: ^4.1.4
 
 flutter:
   uses-material-design: true
