--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "f05" "\0"
+            VALUE "FileDescription", "HYSY" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "f05" "\0"
+            VALUE "InternalName", "HYSY" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "f05.exe" "\0"
-            VALUE "ProductName", "f05" "\0"
+            VALUE "OriginalFilename", "HYSY.exe" "\0"
+            VALUE "ProductName", "HYSY" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
