--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   chinese_font_library: ^1.2.0
   leancloud_storage: ^0.7.10
   json_annotation: ^4.1.0
+  stream_mixin: ^3.0.4
   
 dev_dependencies:
   flutter_test:
