--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   leancloud_storage: ^0.7.10
   json_annotation: ^4.1.0
   stream_mixin: ^3.0.4
+  webview_flutter: ^4.8.0
   
 dev_dependencies:
   flutter_test:
