--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   stream_mixin: ^3.0.4
   webview_flutter: ^4.8.0
   file_picker: ^8.0.5
+  webview_windows: ^0.4.0
   
 dev_dependencies:
   flutter_test:
