--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   webview_flutter: ^4.8.0
   file_picker: ^8.0.5
   webview_windows: ^0.4.0
+  isolates_helper: ^0.4.3+1
+  easy_isolate: ^1.3.0
   
 dev_dependencies:
   flutter_test:
