--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: f05
 description: A new Flutter project.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 2.0.0+1
 # version: 1.0.0
 
 environment:
@@ -28,6 +28,7 @@ dependencies:
   webview_windows: ^0.4.0
   isolates_helper: ^0.4.3+1
   easy_isolate: ^1.3.0
+  package_info_plus: ^8.0.0
   
 dev_dependencies:
   flutter_test:
