--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   isolates_helper: ^0.4.3+1
   easy_isolate: ^1.3.0
   package_info_plus: ^8.0.0
+  url_launcher: ^6.3.0
   
 dev_dependencies:
   flutter_test:
