--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   easy_isolate: ^1.3.0
   package_info_plus: ^8.0.0
   url_launcher: ^6.3.0
+  csv: ^6.0.0
   
 dev_dependencies:
   flutter_test:
